syntax = "proto3";

option csharp_namespace = "Gateway";

package greet;

service AuthService {
  rpc CreateTokens (CreateTokensRequest) returns (CreateTokensResponse);
  rpc Verify (VerifyRequest) returns (VerifyResponse);
}

message CreateTokensRequest{
	uint64 user_id = 1;
}

message CreateTokensResponse{
	string access_token = 1;
	string refresh_token = 2;
}

message VerifyRequest{
	string access_token = 1;
	string refresh_token = 2;
}

message VerifyResponse{
	bool is_valid = 1;
	int64 user_id = 2;
	string access_token = 3;
	string refresh_token = 4;
}


